Fix cypress test text; add spacing in payment details

--- a/src/scenes/Landing/MoveSummary/PpmMoveDetails.module.scss
+++ b/src/scenes/Landing/MoveSummary/PpmMoveDetails.module.scss
@@ -5,7 +5,7 @@
   color: $subtext;
 }
 .payment-details{
-  margin-bottom: 1em;
+  margin-top: 1em;
 }
 
 .detail-title{
